# multi-trie

./: .gitignore  multi-trie.cabal
Data/: Allable.hs  Container.hs  IsContainer.hs  MultiTrie.hs
Data/Container/: Base.hs  List.hs  MultiSet.hs  MultiSetFromList.hs  MultisetFromList.hs  Set.hs  SetFromList.hs
src/: MultiTrie.hs
src/Data/: MultiTrie.hs
tests/: MultiTrieTest.hs  Spec.hs
tex/: multi-trie.tex
