name:           multi-trie
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         Vadim Vinnik <vadim.vinnik@gmail.com>
maintainer:     Vadim Vinnik <vadim.vinnik@gmail.com>
synopsis:       Trie of multisets
description:
    A multi-trie is a trie (i.e. a tree whose child nodes have distinct labels)
    with each node containing a list of values considered as a multiset.
    
    Some operations could be defined for multi-tries in a rather natural way,
    including 'map', 'union', 'intersection', 'cartesianProduct'.
    
    Moreover, a multi-trie can contain not only ordinary values but also functions
    that makes it possible to apply a multi-trie of functions to a multi-trie of
    argument values, combining results with 'cartesianProduct', 'union' or
    'intersection'. This makes multi-tries a kind of 'Applicative' and 'Monad'.

homepage:       https://github.com/vvinnik-softheme/multi-trie
category:       Data
copyright:      Vadim Vinnik, 2015
license:        MIT
license-file:   LICENSE

source-repository head
  type:      Git
  location:  https://github.com/vvinnik-softheme/multi-trie

library
  build-depends:    
                    base == 4.*,
                    containers
  Hs-Source-Dirs:   src/
  ghc-options:      -Wall
  exposed-modules:  Data.MultiTrie

test-suite Spec
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4,
                   HTF > 0.9,
                   multi-trie,
                   containers
  other-modules:   MultiTrieTest
  hs-source-dirs:  tests

